--- a/src/components/Achievement/Achievement.css
+++ b/src/components/Achievement/Achievement.css
@@ -22,6 +22,10 @@
     margin-bottom: 1.5rem;
 }
 
+p{
+    font-family: var(--primaryFont); 
+}
+
 .achievement-body h4 {
     font-size: 1.75rem;
     font-family: 'Caveat', cursive;
